// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`event.filterMap event.filterMap should drop undefined values: evenNum event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        run: effect
      ],
      next: []
    }
  ]
}"
`;

exports[`event.filterMap event.filterMap should drop undefined values: num event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: callStack,
        filter: Function
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                run: effect
              ],
              next: []
            }
          ]
        }
      ]
    }
  ]
}"
`;
